src/main/metadata-au/objects/Lead__c.object
<CustomObject>
    <description>Lead: purchase intention of customer</description>
    <fields>
        <fullName>Accepted_Date_Time__c</fullName>
        <label>Accepted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Aftersales_Vehicle_Brand__c</fullName>
        <formula>TEXT(VehicleRel_No__r.Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aftersales Vehicle Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Data_Sharing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Data Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Hours__c</fullName>
        <label>Amount(Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Date_Time__c</fullName>
        <label>Assigned Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Assigned Dealer)</relationshipLabel>
        <relationshipName>Lead_Assigned_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Dealer_Directly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned to Dealer Directly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Rate__c</fullName>
        <label>Base Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Batch_No__c</fullName>
        <label>Batch No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bought_Vehicle_Brand__c</fullName>
        <label>Bought Vehicle Brand</label>
        <picklist>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bought_Vehicle_Class__c</fullName>
        <label>Bought Vehicle Class</label>
        <picklist>
            <controllingField>Bought_Vehicle_Brand__c</controllingField>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S 63 L AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW E-Class Sport Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S 63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G65 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK55 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G55 AMG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bought_Vehicle_Model__c</fullName>
        <label>Bought Vehicle Model</label>
        <picklist>
            <controllingField>Bought_Vehicle_Class__c</controllingField>
            <picklistValues>
                <fullName>A160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B180 BlueEFFICIENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 BlueEFFICIENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Sports Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 luxury model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Luxury Night Exclusive Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C180K Classic (CKD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C180K Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI elegant type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI Avantgarde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 Entry Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 Wagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 AvantgardeWagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 luxury model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K grace model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K sports car (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 grace model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 sports car (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240 (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240A fashion model (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240E grace model (not current series)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allmakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus &amp; Coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelecTrucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unimog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Star</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAC_Lead_Status__c</fullName>
        <label>CAC Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Enquiry</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Attempt Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Actioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Credit Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer to Head Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Application Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financials Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold Vehicle and Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAC_Lost_Reason__c</fullName>
        <label>CAC Lost Reason</label>
        <picklist>
            <controllingField>CAC_Lead_Status__c</controllingField>
            <picklistValues>
                <fullName>Hoax / Child / Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 attempts no contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer went to competitor due to price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer went to competitor due to product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer went to competitor due to service support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response time too long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer changed their mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong / Invalid contact details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer has already attended dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to maximum Credit Limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service loan car not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service time not suitable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested (no quote)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid by Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees and Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turnaround Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAC_SourceId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External id field for migration purpose</description>
        <externalId>true</externalId>
        <label>CAC SourceId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Car_License__c</fullName>
        <label>Car License</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <label>Car Model</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>System filed, please ignore. System field , please do not bother.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collectioner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collectioner Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Leads_Collectioner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collectioner_Notes__c</fullName>
        <label>Collectioner Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combine_Interested_Vehicle_Brand__c</fullName>
        <formula>IF(
OR(
ISPICKVAL(Interested_Vehicle_Brand__c,'MB'),
ISPICKVAL(Interested_Vehicle_Brand__c,'AMG')
), 'MB', 'smart'
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combine Interested Vehicle Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Company Account)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Failed_For_3_Days_Date_Time__c</fullName>
        <label>Contact Failed For 3 Days Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Failed_For_3_Days_Date__c</fullName>
        <label>Contact Failed For 3 Days Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Timing__c</fullName>
        <label>Contact Timing</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Lead_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Rate__c</fullName>
        <label>Contract Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentMileage__c</fullName>
        <label>CurrentMileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>IF( ISBLANK( Company_Account__c ) , IF( ISBLANK( Contact__c ) , '', Contact__r.Name ) , Company_Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
	
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Authority2__c</fullName>
        <label>DD Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Authority__c</fullName>
        <formula>Existing_Contract__r.Direct_Debit_Authority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Debit Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUP_Number__c</fullName>
        <formula>Contact__r.DUP_Number__pc</formula>
        <label>DUP Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Aftersales_Manager_Email__c</fullName>
        <label>Dealer Aftersales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Audit_Result__c</fullName>
        <label>Dealer Audit Result</label>
        <picklist>
            <controllingField>Dealer_Audit__c</controllingField>
            <picklistValues>
                <fullName>The dealer did not contact the customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealers have contact Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The customer does not expressly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Comments__c</fullName>
        <label>Dealer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Commission__c</fullName>
        <label>Dealer Commission</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_LMS__c</fullName>
        <formula>TEXT(Assigned_Dealer__r.Dealer_LMS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer LMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Lead_Status__c</fullName>
        <label>Dealer Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Failed For 3 Days(Only Non BDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Contact Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visited Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Placed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased(Only Non BDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost(Dealer)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Lost_Reason__c</fullName>
        <label>Dealer Lost Reason</label>
        <picklist>
            <controllingField>Dealer_Lead_Status__c</controllingField>
            <picklistValues>
                <fullName>Out of Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price not accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought MB elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought other brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought in ISP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase plan postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade in failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No serious interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer can not be reached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer does not respond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid customer data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hibernate Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No suitable model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied with service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The showroom is not convenient for me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Campaign Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate for un-reported show-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotation request from other dealer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Owner_Email__c</fullName>
        <label>Dealer Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Purchase_Time__c</fullName>
        <label>Dealer Purchase Time</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>within 1 week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>within 1 month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Successful_Contacted__c</fullName>
        <formula>IF( 
AND(
ISPICKVAL(Assigned_Dealer__r.Dealer_LMS__c,'No'),
Dealer_Untouched_In_72H__c = False,
OR(
ISPICKVAL(Dealer_Lead_Status__c,'First Contact Customer'),
ISPICKVAL(Dealer_Lead_Status__c,'Test Drive'),
ISPICKVAL(Dealer_Lead_Status__c,'Visited Showroom(Only Non BDC)'),
ISPICKVAL(Dealer_Lead_Status__c,'Order Placed'),
ISPICKVAL(Dealer_Lead_Status__c,'Purchased(Only Non BDC)'),
ISPICKVAL(Dealer_Lead_Status__c,'Lost(Dealer)')
)
),
True,
IF(
AND(
ISPICKVAL(Assigned_Dealer__r.Dealer_LMS__c,'Yes'),
Dealer_Untouched_In_72H__c = False,
NOT(
OR(
ISPICKVAL(Dealer_Lead_Status__c,'Assigned'),
ISPICKVAL(Dealer_Lead_Status__c,'Received'),
ISPICKVAL(Dealer_Lead_Status__c,'Accepted'),
AND(
ISPICKVAL(Dealer_Lead_Status__c,'Lost(Dealer)'),
OR(
ISPICKVAL(Dealer_Lost_Reason__c,'Customer can not be reached'),
ISPICKVAL(Dealer_Lost_Reason__c,'Customer does not respond')
)
)
)
)
),
True,
False
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Successful Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Untouched_In_72H__c</fullName>
        <description>/* 
Created by: Mouse Liu 
Used by: Lead__c (US-Lead-046) 
Function: If no status is updated more than 72 hours after sales lead is assigned to dealer, "Dealer Untouched(In 72H)" field (formula) shows up the value "Untouched" automatically. 

Used in:

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <formula>IF(
ISPICKVAL(Assigned_Dealer__r.Dealer_LMS__c,'No'), 
AND (
    NOW() - 3 &gt; Accepted_Date_Time__c,

    OR (
        ISBLANK(Proxy_Date_Time__c),
        Proxy_Date_Time__c - 3 &gt; Accepted_Date_Time__c
    )
),
IF(
ISBLANK(Accepted_Date_Time__c), 
NOW() - 3 &gt; Received_Date_Time__c, 
Accepted_Date_Time__c - 3 &gt; Received_Date_Time__c
)
)</formula>
        <label>Dealer Untouched(In 72H)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doc_Fee__c</fullName>
        <label>Doc Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drop_off_Time__c</fullName>
        <label>Drop-off Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF( 
ISBLANK(Contact__c), 
Company_Account__r.Email__c , 
Contact__r.Email__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Flag__c</fullName>
        <formula>IF(AND(NOW()-LastModifiedDate &gt;= 1, NOW()-LastModifiedDate &lt; 3)
, IMAGE('/img/samples/flag_yellow.gif','24H Untouched')
, IF(NOW()-LastModifiedDate &gt;= 3, IMAGE('/img/samples/flag_red.gif','72H Untouched')
, ''))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EuroVIN__c</fullName>
        <label>EuroVIN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>